--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
+    "classnames": "^2.3.1",
+    "gh-pages": "^3.2.3",
+    "mobx": "^6.4.2",
+    "mobx-react-lite": "^3.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-id-swiper": "^4.0.0",
+    "react-player": "^2.9.0",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "swiper": "^8.0.7"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy": "npm run build && scp -P 2222 -r ./build/* starwarsru@185.72.146.161:/home/s/starwarsru/tinkoff.ilya.rjadysh.com"
   },
   "eslintConfig": {
     "extends": [
